<resources>
    <string name="app_name">Adhyatmah</string>
    <string name="rontomsongh">Rontomsongh</string>
    <string name="search_dresses">Search product</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="formals">Formals</string>
    <string name="ribbed_top">Ribbed Top</string>
    <string name="wishlist">Wishlist</string>
    <string name="name">First Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="by_signing_up_you_agree_to_our_terms_of_services_and_privacy_policy">By signing up you agree to our Terms of Services and Privacy Policy.</string>
    <string name="kumar">Kumar</string>
    <string name="email">Email</string>
    <string name="xyz_gmail_com">xyz@gmail.com</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="have_an_account">Don\'t have an account?</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email Id</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please, enter your email address. You will receive a link to create a new password via email.</string>
    <string name="send">Send</string>
    <string name="house_number_65_model_town_njalandhar_144003_n_91_8423675412">House Number 65, Model Town,\nJalandhar, 144003\n+91 8423675412</string>
    <string name="set_as_default">Set as Default</string>
    <string name="total_amount">Total Amount</string>
    <string name="apply">Apply</string>
    <string name="expiry_space">expiry space</string>
    <string name="my_orders_details">My Orders Details</string>
    <string name="pay_method">Pay Method</string>
    <string name="order_id">ORDER ID</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="first_name">First Name</string>
    <string name="ghs_0_00">GHS 0.00</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="rontomsonghs">Rontomsongh</string>
    <string name="coupons">Coupons</string>
    <string name="my_bookings">My Booking</string>
    <string name="booking_id_123546567895">booking id 123456789</string>
    <string name="g_52_sector_63_rd_g_block_sector_63_noida_chotpur_uttar_pradesh_201309">Noida sector 73\n</string>
    <string name="hanuman_puja">Hanuman Puja</string>
    <string name="date_time">Date &amp; Time</string>
    <string name="complete">Complete</string>
    <string name="decline">Decline</string>
    <string name="_1_25_lakh_mantra">1.25 lakh mantra</string>
    <string name="no_available">No Slots Available</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="home">Home</string>
    <string name="pandit_ji">Pandit ji</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="next">Next</string>
    <string name="all">All</string>
    <string name="custom_alert">Custom Alert</string>
    <string name="this_is_a_custom_message">This is a custom message!</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_pooja">Select Puja</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="add_address">Add Address</string>
    <string name="step_1">Step 1</string>
    <string name="contact">Contact</string>
    <string name="enter_first_name">Enter first name*</string>
    <string name="enter_last_name">Enter last name*</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="locality_area_street">Locality / Area / Street*</string>
    <string name="landmark">Landmark</string>
    <string name="pin_code">Pin Code*</string>
    <string name="city">City*</string>
    <string name="country">Country*</string>
    <string name="continu">Continue</string>
    <string name="apply_coupons">Apply Coupons</string>
    <string name="enter_your_coupon_code">Enter your coupon code</string>
    <string name="coupon_code">Coupon code</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="or_select_coupon_code">- or select coupon code -</string>
    <string name="no_add_to_cart_data_found">No add to cart data found</string>
    <string name="my_cart">My Cart</string>
    <string name="no_items_in_your_cart">No items in your Cart</string>
    <string name="view_all_coupons">View all Coupons</string>
    <string name="order_details">Order Details</string>
    <string name="cart_subtotal">Cart Subtotal</string>
    <string name="tax_amount">Tax Amount</string>
    <string name="shipping">Shipping</string>
    <string name="free">Free</string>
    <string name="checkout">Checkout</string>
    <string name="title">title</string>
    <string name="des">des</string>
    <string name="booking_details">Booking Details</string>
    <string name="about">About</string>
    <string name="booking_address">Booking Address:</string>
    <string name="state">State*</string>
    <string name="change_address">Change Address</string>
    <string name="brand">Brand</string>
    <string name="search">Search</string>
    <string name="discard">Discard</string>
    <string name="puja">Puja</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="review_your_order">Review Your Order</string>
    <string name="payment_plan">Payment Plan</string>
    <string name="gst">GST</string>
    <string name="platform_fee">Platform Fee</string>
    <string name="pay_full">Pay Full Service Price</string>
    <string name="pay_advance">Pay 30% Advance Payment</string>
    <string name="book">Book</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="step_3">Step 3</string>
    <string name="pay_with">Pay With</string>
    <string name="place_order">Place Order</string>
    <string name="congratulations">Congratulations!</string>
    <string name="thank_you_for_your_purchase_your_order_will_n_be_delivered_in_3_5_working_days_we_hope_n_you_enjoy_your_new_items">Thank you for your purchase. Your order will \n be delivered in 3-5 working days.We hope \n you enjoy your new items!</string>
    <string name="contact_us">Contact Us</string>
    <string name="introduction">Introduction</string>
    <string name="welcome_to_adhyatmah_your_one_stop_destination_for_all_essential_pooja_and_spiritual_items_we_believe_that_every_ritual_deserves_purity_and_authenticity_which_is_why_we_bring_you_carefully_sourced_and_high_quality_products_for_every_religious_occasion_from_daily_puja_essentials_to_festival_specific_items_we_ensure_that_your_spiritual_journey_remains_seamless_and_divine_with_adhyatmah_experience_convenience_trust_and_devotion_delivered_to_your_doorstep">Welcome to Adhyatmah, your one-stop destination for all essential puja and spiritual items. We believe that every ritual deserves purity and authenticity, which is why we bring you carefully sourced and high-quality products for every religious occasion. From daily puja essentials to festival-specific items, we ensure that your spiritual journey remains seamless and divine. With Adhyatmah, experience convenience, trust, and devotion delivered to your doorstep.</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="gmail">Gmail</string>
    <string name="instagram">Instagram</string>
    <string name="date_amp_time_selection"><![CDATA[Date & Time Selection]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_number">Enter number</string>
    <string name="save_changes">Save Changes</string>
    <string name="filters">Filters</string>
    <string name="price_range">Price range</string>
    <string name="colors">Colors</string>
    <string name="sizes">Sizes</string>
    <string name="forget_password">Forget Password</string>
    <string name="faq_s_section"><![CDATA[FAQ\'s & Support]]></string>
    <string name="blogs">Blogs</string>
    <string name="follow_us_on_youtube">FOLLOW US ON YOUTUBE</string>
    <string name="discover_our_product">Discover Our Product</string>
    <string name="view_all">View All</string>
    <string name="choose_the_pooja_and_book_a_pandit_ji_online">Choose the puja and book a pandit ji online</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_log_out_you_will_be_missed">Are you sure you want to log out? You will be missed!</string>
    <string name="yes_i_am_sure">Yes, I am sure</string>
    <string name="manage_address">Manage Address</string>
    <string name="my_orders">My Orders</string>
    <string name="here_are_your_orders">Here are your orders.</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="original_price">Original Price</string>
    <string name="fee">Fee</string>
    <string name="total">Total</string>
    <string name="purchase_time">Purchase time</string>
    <string name="payment_method">Payment Method</string>
    <string name="status">Status</string>
    <string name="copy">Copy</string>
    <string name="cash">Cash</string>
    <string name="paid">Paid</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="verify_phone_number">Verify Phone Number</string>
    <string name="enter_the_6_digit_otp_sent_to_your_number">Enter the 6-digit OTP sent to your number</string>
    <string name="you_will_receive_otp_in_00_29">You will receive OTP in 00:29</string>
    <string name="didn_t_you_receive_the_otp">Didn’t you receive the OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="search_">Search...</string>
    <string name="pandit_details">Pandit Details</string>
    <string name="pooja">Puja</string>
    <string name="pooja_items">Puja Items</string>
    <string name="date_and_time">Date and Time</string>
    <string name="fees">Fees</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="step_2">Step 2</string>
    <string name="color">Color</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sort">Sort</string>
    <string name="my_profile">My Profile</string>
    <string name="guest">Guest</string>
    <string name="all_reviews">All Reviews</string>
    <string name="select_language_s">Select Language(s)</string>
    <string name="sort_by">Sort by</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="track_your_order">Track Your Order</string>
    <string name="read_more">Read more</string>
    <string name="featured_products">Featured Products</string>
    <string name="price">Price</string>
    <string name="pooja_time">Puja Time</string>
    <string name="pooja_samagri">Puja Samagri</string>
    <string name="track">Track</string>
    <string name="credit_or_debit_card">Credit or Debit Card</string>
    <string name="perfect_must_buy">Perfect. Must buy!</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="sign_up_required">Sign Up Required</string>
    <string name="sign_up_required_to_go_to_profile">Sign up required to go to Profile.</string>
    <string name="choose_an_option">Choose an option</string>
</resources>