<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_top_left_top_righ"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:fontFamily="@font/muktamahee_regular"
            android:text="@string/logout"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/logoutMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/muktamahee_regular"
            android:text="@string/are_you_sure_you_want_to_log_out_you_will_be_missed"
            android:textColor="#111111"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white_E9E9E9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingVertical="7dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:padding="7dp"
                android:text="@string/cancel"
                android:textColor="#7C7C7C"
                android:textSize="15dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muktamahee_regular"
                android:padding="7dp"
                android:text="@string/yes_i_am_sure"
                android:textColor="#FD3E75"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
    
</layout>