<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="15dp"
        tools:context=".presentation.ui.fragment.ApplyCouponsFragment"
        android:layout_marginHorizontal="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="50dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/apply_coupons_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_coupons"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_img"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:textColor="#272727"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/enter_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/jost"
            android:text="@string/enter_your_coupon_code"
            android:textColor="#000000"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apply_coupons_title_tv" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/coupon_code_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:background="@drawable/rectangel_f7f7f7_radius_16"
            android:fontFamily="@font/jost"
            android:hint="@string/coupon_code"
            android:gravity="center_vertical"
            android:textColor="@color/black_000000"
            android:textSize="18dp"
            android:paddingHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_code_tv" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/apply_coupon_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/rectangle_black"
            android:fontFamily="@font/jost"
            android:gravity="center"
            android:text="@string/apply_coupon"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coupon_code_btn"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/or_select_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_select_coupon_code"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="18dp"
            android:textColor="#000000"
            android:fontFamily="@font/jost"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apply_coupon_btn"
            android:layout_marginTop="13dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_code_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/or_select_tv"
            android:padding="5dp" />

<!--
        <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rectangle_black"
        android:fontFamily="@font/jost_bold"
        android:gravity="center"
        android:text="Continue"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>