<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/black_opacity_10"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.fragment.CongratulationFragment">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/celebrateId"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@mipmap/calebrate"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/successId"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/celebrateId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@mipmap/successful_check"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/orderID"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/successId"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/order_id"
            android:textSize="15sp"
            android:foregroundGravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/muktamahee_bold"
            android:layout_marginTop="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/CongratulationsID"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/orderID"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/congratulations"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:fontFamily="@font/muktamahee_bold"
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>
 <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionId"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/CongratulationsID"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/thank_you_for_your_purchase_your_order_will_n_be_delivered_in_3_5_working_days_we_hope_n_you_enjoy_your_new_items"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@color/black"
           android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/muktamahee_regular"
            android:layout_marginTop="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24sp"
            android:textColor="@color/white"
            android:text="@string/continue_shopping"
            android:textAllCaps="false"
            android:textSize="16dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/muktamahee_bold"
            android:background="@drawable/rectangle_filter_black"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>